# zfista

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: actions.yaml  unittest.yaml  unittest.yml
benchmarks/: benchmark.py
docs/: benchmarks.rst  conf.py  index.rst  modules.rst  runtests.rst  tests.rst  zfista.rst
examples/: PGM_experiment.ipynb  PGM_experiment_with_various_a_b.ipynb  cameraman.ipynb
examples/data/: FDS_CONSTRAINED_ab.csv  FDS_ab.csv  JOS1_L1_ab.csv  JOS1_ab.csv  SD_ab.csv  cameraman_ab.csv
examples/test_problems/: problems.py
tests/: test_metrics.py  test_problems.py  test_proximal_gradient.py
zfista/: __init__.py  _typing.py  metrics.py  problems.py  proximal_gradient.py
