[metadata]
name = zfista
version = 0.0.1
description = A globally convergent fast iterative shrinkage-thresholding algorithm with a new momentum factor for single and multi-objective convex optimization
long_description = file: README.md
long_description_content_type = text/markdown
author = Hiroki Tanabe
author_email = tanabe.hiroki.45n@kyoto-u.jp
license = MIT

[options]
packages = find:
install_requires = 
    scipy
python_requires = >=3.7
