[metadata]
name = zfista
version = 0.0.2
description = A globally convergent fast iterative shrinkage-thresholding algorithm with a new momentum factor for single and multi-objective convex optimization
long_description = file: README.md
long_description_content_type = text/markdown
author = Hiroki Tanabe
author_email = tanabe.hiroki.45n@kyoto-u.jp
license = MIT

[options]
packages = find:
install_requires = 
    jaxopt
    pymoo
    scipy
    typing_extensions
python_requires = >=3.8

[options.extras_require]
test =
    scikit-learn
    mypy
docs =
    sphinx
    sphinxcontrib-katex
    sphinx_rtd_theme
